--- a/index.html
+++ b/index.html
@@ -5,30 +5,75 @@
     <title> CINCO Y DIEZ </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link
-    href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700800,900|Cormorant+Garamond:300,300i,400,400i,500,500i,600,600i,700,700i"
-    rel="stylesheet">
+    href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900|Cormorant+Garamond:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
    </head>
     <body>
       <header>
-        <a href="index.html" class="header-brand">Cinco y Diez</a>
+        <a href="index.html" class="header-brand">CINCO Y DIEZ</a>
         <nav>
           <ul>
-            <li><a href=">aboutus.html">About us</a></li>
-            <li><a href=">store.html">Store</a></li>
-            <li><a href=">contact.html">Contact</a></li>
+            <li><a href="store.html">Store</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="aboutus.html">About us</a></li>
           </ul>
-          <a href="cases.html" class="header-class">Cases</a>
+          <a href="searches.html" class="header-cases">Collectivo</a>
         </nav>
       </header>
       <main>
         <section class="index-banner">
-          <h2>Welcome!</h2>
-          <h1>We are a local marketing company. Growing with the community. Together we form a virtual community where we can find products and services. Read local news and see the funnies.</h1>
+          <div class="vertical-center">
+            <h2>Welcome</h2>
+            <h1>To your virtual Five & Dime.</h1>
+          </div>
         </section>
-      </main>
+        <section class="index-links">
+          <a href="searches.html">
+            <div class="index-boxlink-square">
+              <h3>Collectivo</h3>
+            </div>
+        </a>
+          <a href="#">
+            <div class="index-boxlink-rectangle">
+            <h3>Facebook</h3>
+          </div>
+        </a>
+          <a href="#">
+            <div class="index-boxlink-square">
+            <h3>Youtube</h3>
+          </div>
+        </a>
+          <a href="#">
+            <div class="index-boxlink-rectangle">
+            <h3>Instagram</h3>
+          </div>
+        </a>
+      </section>
+    </main>
       <footer>
+        <ul class="footer-links-main">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About us</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Store</a></li>
+          <li><a href="#">Collectivo</a></li>
+        </ul>
+        <ul class="footer-links-cases">
+          <li>Last searches</li>
+          <li><a href="#">Date</a></li>
+          <li><a href="#">Date</a></li>
+          <li><a href="#">Date</a></li>
+          <li><a href="#">Date</a></li>
+        </ul>
+        <div class="footer-sm">
+          <a href="#">
+            <img src="img/github.png" alt="Github Icon">
+            <img src="img/fb.png" alt="Facebook Icon">
+            <img src="img/instagram.png" alt="Instagram Icon">
+            <img src="img/CyDT1.jpg" alt="Cinco y Diez Icon">
+          </a>
 
+        </div>
       </footer>
     </body>
-</html>
+  </html>
