--- a/index.html
+++ b/index.html
@@ -13,67 +13,68 @@
         <a href="index.html" class="header-brand">CINCO Y DIEZ</a>
         <nav>
           <ul>
-            <li><a href="store.html">Store</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="aboutus.html">About us</a></li>
+            <li><a href="#">Tijuana</a></li>
           </ul>
           <a href="searches.html" class="header-cases">Collectivo</a>
         </nav>
       </header>
       <main>
-        <section class="index-banner">
-          <div class="vertical-center">
-            <h2>Welcome</h2>
-            <h1>To your virtual Five & Dime.</h1>
-          </div>
-        </section>
-        <section class="index-links">
-          <a href="searches.html">
-            <div class="index-boxlink-square">
-              <h3>Collectivo</h3>
+          <section class="index-banner">
+            <div class="vertical-center">
+              <h2>Welcome</h2>
+              <h1>To your virtual Five & Dime.</h1>
             </div>
-        </a>
-          <a href="#">
-            <div class="index-boxlink-rectangle">
-            <h3>Facebook</h3>
-          </div>
-        </a>
-          <a href="#">
-            <div class="index-boxlink-square">
-            <h3>Youtube</h3>
-          </div>
-        </a>
-          <a href="#">
-            <div class="index-boxlink-rectangle">
-            <h3>Instagram</h3>
-          </div>
-        </a>
-      </section>
-    </main>
-      <footer>
-        <ul class="footer-links-main">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About us</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#">Store</a></li>
-          <li><a href="#">Collectivo</a></li>
-        </ul>
-        <ul class="footer-links-cases">
-          <li>Last searches</li>
-          <li><a href="#">Date</a></li>
-          <li><a href="#">Date</a></li>
-          <li><a href="#">Date</a></li>
-          <li><a href="#">Date</a></li>
-        </ul>
-        <div class="footer-sm">
-          <a href="#">
-            <img src="img/github.png" alt="Github Icon">
-            <img src="img/fb.png" alt="Facebook Icon">
-            <img src="img/instagram.png" alt="Instagram Icon">
-            <img src="img/CyDT1.jpg" alt="Cinco y Diez Icon">
+          </section>
+          <div class="wrapper">
+            <section class="index-links">
+            <a href="#">
+                <div class="index-boxlink-rectangle">
+                <h3>About Us</h3>
+              </div>
+            </a>
+              <a href="#">
+                <div class="index-boxlink-square">
+                <h3>Gift Shop</h3>
+              </div>
+            </a>
+              <a href="#">
+                <div class="index-boxlink-rectangle">
+                <h3>Instagram</h3>
+              </div>
+            </a>
+            <a href="searches.html">
+              <div class="index-boxlink-square">
+                <h3>Collectivo</h3>
+              </div>
           </a>
-
-        </div>
-      </footer>
+        </section>
+      </div>
+    </main>
+    <div class="wrapper">
+        <footer>
+          <ul class="footer-links-main">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Gift Shop</a></li>
+            <li><a href="#">Collectivo</a></li>
+          </ul>
+          <ul class="footer-links-cases">
+            <li><p>Latest searches</p></li>
+            <li><a href="#">MM/DD/YY</a></li>
+            <li><a href="#">MM/DD/YY</a></li>
+            <li><a href="#">MM/DD/YY</a></li>
+            <li><a href="#">MM/DD/YY</a></li>
+          </ul>
+          <div class="footer-sm">
+            <a href="#">
+              <img src="img/github.png" alt="Github Icon">
+              <img src="img/fb.png" alt="Facebook Icon">
+              <img src="img/instagram.png" alt="Instagram Icon">
+              <img src="img/CyDT1.jpg" alt="Cinco y Diez Icon">
+            </a>
+          </div>
+        </footer>
+      </div>
     </body>
   </html>
