--- a/contact.html
+++ b/contact.html
@@ -1,18 +1,51 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
     <meta charset="utf-8">
-    <title> Contacts </title>
-    <link rel="stylesheet" href="/css/master.css">
+    <title> CINCO Y DIEZ </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+    href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900|Cormorant+Garamond:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
    </head>
-   <body>
-     <h1>Contacts</h1>
-    <p class="p-welcome">Name: Daniel Nielsen</p>
-    <p class="p-welcome">E-Mail: Daniel Nielsen@gmail.com</p>
-    <a href="index.html">home</a>
-    <a href="login.html" target="_blank">Log in</a>
-    <a href="aboutus.html"target="_blank">About us</a>
-    <a href="store.html"target="_blank">Store</a>
+    <body>
+      <header>
+        <a href="index.html" class="header-brand">CINCO Y DIEZ</a>
+        <nav>
+          <ul>
+            <li><a href="#">Contact</a></li>
+          </ul>
+          <a href="searches.html" class="header-cases">Collectivo</a>
+        </nav>
+      </header>
+      <main>
+
+    </main>
+    <div class="wrapper">
+        <footer>
+          <ul class="footer-links-main">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Gift Shop</a></li>
+            <li><a href="#">Collectivo</a></li>
+          </ul>
+          <ul class="footer-links-cases">
+            <li><p>Latest searches</p></li>
+            <li><a href="#">MM/DD/YY</a></li>
+            <li><a href="#">MM/DD/YY</a></li>
+            <li><a href="#">MM/DD/YY</a></li>
+            <li><a href="#">MM/DD/YY</a></li>
+          </ul>
+          <div class="footer-sm">
+            <a href="#">
+              <img src="img/github.png" alt="Github Icon">
+              <img src="img/fb.png" alt="Facebook Icon">
+              <img src="img/instagram.png" alt="Instagram Icon">
+              <img src="img/CyDT1.jpg" alt="Cinco y Diez Icon">
+            </a>
+          </div>
+        </footer>
+      </div>
     </body>
-  <h1>Contact</h1>
-</html>
+  </html>
