--- a/date1.html
+++ b/date1.html
@@ -19,54 +19,49 @@
         </nav>
       </header>
       <main>
-        <section class="cases-links">
+        <section class="case-vid">
           <div class="wrapper">
-            <h2>Searches</h2>
-            <a href="Case1.html">
-              <div class="cases-link">
-                  <p>Date</p>
-                </div>
-            </a>
-            <a href="Case2.html">
-              <div class="cases-link">
-                  <p>Date</p>
-                </div>
-            </a>
-            <a href="Case3.html">
-              <div class="cases-link">
-                  <p>Date</p>
-                </div>
-            </a>
-            <a href="Case4.html">
-              <div class="cases-link">
-                  <p>Date</p>
-                </div>
-            </a>
-            <a href="Case5.html">
-              <div class="cases-link">
-                  <p>Date</p>
-                </div>
-            </a>
-            <a href="Case6.html">
-              <div class="cases-link">
-                  <p>Date</p>
-                </div>
-            </a>
-            <a href="Case7.html">
-              <div class="cases-link">
-                  <p>Date</p>
-                </div>
-            </a>
-            <a href="Case8.html">
-              <div class="cases-link">
-                  <p>Date</p>
-                </div>
-            </a>
-          </div>
-        </div>
-    </section>
+            <h2>mm/dd/yy</h2>
+            <video src="vid/Intro2.mp4" poster="img/CyDT1.jpg " controls></video>
+            <article>
+              <h3>Isaiah | 1:1-6</h3>
+              <div>
+                <p>
+1 Here is the vision about Judah and Jerusalem that Isaiah saw. It came to him when Uzziah, Jotham, Ahaz and Hezekiah were ruling. They were kings of Judah. Isaiah was the son of Amoz.
 
-    </main>
+The Nation Refuses to Obey the Lord
+2 Listen to me, you heavens! Pay attention to me, earth!
+    The Lord has said,
+“I raised children. I brought them up.
+    But they have refused to obey me.
+3 The ox knows its master.
+    The donkey knows where its owner feeds it.
+But Israel does not know me.
+    My people do not understand me.”
+
+4 How terrible it will be for this sinful nation!
+    They are loaded down with guilt.
+They are people who do nothing but evil.
+    They are children who are always sinning.
+They have deserted the Lord.
+    They have turned against the Holy One of Israel.
+    They have turned their backs on him.
+
+5 Israel, why do you want to be beaten all the time?
+    Why do you always refuse to obey the Lord?
+Your head is covered with wounds.
+    Your whole heart is weak.
+6 There isn’t a healthy spot on your body.
+    You are not healthy from the bottom of your feet to the top of your head.
+You have nothing but wounds, cuts
+    and open sores.
+They haven’t been cleaned up or bandaged
+    or treated with olive oil.</p>
+                </div>
+            </article>
+
+    </section>
+  </main>
     <div class="wrapper">
         <footer>
           <ul class="footer-links-main">
