--- a/searches.html
+++ b/searches.html
@@ -24,7 +24,7 @@
             <h2>Searches</h2>
             <a href="Case1.html">
               <div class="cases-link">
-                  <p>Date</p>
+                  <p>Dates</p>
                 </div>
             </a>
             <a href="Case2.html">
