--- a/searches.html
+++ b/searches.html
@@ -22,7 +22,7 @@
         <section class="cases-links">
           <div class="wrapper">
             <h2>Searches</h2>
-            <a href="Case1.html">
+            <a href="date1.html">
               <div class="cases-link">
                   <p>Dates</p>
                 </div>
