--- a/giftshop.html
+++ b/giftshop.html
@@ -20,6 +20,36 @@
       </header>
       <main>
 
+        <div class="wrapper">
+          <h2 class="gallery-links-h2">Gift Shop</h2>
+        </div>
+
+        <section class="gallery-links">
+          <a href="#" class="gallery-img">
+            <img src="img/store.jpg" alt="gallery image">
+          </a>
+          <a href="#" class="gallery-img">
+            <img src="img/store.jpg" alt="gallery image">
+          </a>
+          <a href="#" class="gallery-img">
+            <img src="img/store.jpg" alt="gallery image">
+          </a>
+          <a href="#" class="gallery-img">
+            <img src="img/store.jpg" alt="gallery image">
+          </a>
+          <a href="#" class="gallery-img">
+            <img src="img/store.jpg" alt="gallery image">
+          </a>
+          <a href="#" class="gallery-img">
+            <img src="img/store.jpg" alt="gallery image">
+          </a>
+          <a href="#" class="gallery-img">
+            <img src="img/store.jpg" alt="gallery image">
+          </a>
+          <a href="#" class="gallery-img">
+            <img src="img/store.jpg" alt="gallery image">
+          </a>
+        </section>
     </main>
     <div class="wrapper">
         <footer>
