--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title> !CINCO Y DIEZ! </title>
+    <title>CINCO Y DIEZ</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link
     href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900|Cormorant+Garamond:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -27,17 +27,17 @@
           </section>
           <div class="wrapper">
             <section class="index-links">
-            <a href="#">
+            <a href="aboutus.html">
                 <div class="index-boxlink-rectangle">
                 <h3>About Us</h3>
               </div>
             </a>
-              <a href="#">
+              <a href="giftshop.html">
                 <div class="index-boxlink-square">
                 <h3>Gift Shop</h3>
               </div>
             </a>
-              <a href="#">
+              <a href="https://www.instagram.com/cincoydieztijuana/">
                 <div class="index-boxlink-rectangle">
                 <h3>Instagram</h3>
               </div>
