Added a form to contact.html needs styling mod the footer on all pages

--- a/giftshop.html
+++ b/giftshop.html
@@ -13,7 +13,7 @@
         <a href="index.html" class="header-brand">CINCO Y DIEZ</a>
         <nav>
           <ul>
-            <li><a href="#">Gift Shop</a></li>
+            <li><a href="giftshop.html">Gift Shop</a></li>
           </ul>
           <a href="searches.html" class="header-cases">Collectivo</a>
         </nav>
@@ -68,11 +68,10 @@
             <li><a href="#">MM/DD/YY</a></li>
           </ul>
           <div class="footer-sm">
-            <a href="#">
-              <img src="img/github.png" alt="Github Icon">
+            <a href="https://www.facebook.com/Cinco-y-Diez-111738623712834/">
               <img src="img/fb.png" alt="Facebook Icon">
               <img src="img/instagram.png" alt="Instagram Icon">
-              <img src="img/CyDT1.jpg" alt="Cinco y Diez Icon">
+              <img src="img/youtube.png" alt="Youtube Icon">
             </a>
           </div>
         </footer>
