--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                 <h3>Gift Shop</h3>
               </div>
             </a>
-              <a href="https://www.instagram.com/cincoydieztijuana/">
+              <a href="contact.html">
                 <div class="index-boxlink-rectangle">
-                <h3>Instagram</h3>
+                <h3>Contact</h3>
               </div>
             </a>
             <a href="searches.html">
@@ -53,11 +53,11 @@
     <div class="wrapper">
         <footer>
           <ul class="footer-links-main">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Gift Shop</a></li>
-            <li><a href="#">Collectivo</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="aboutus.html">About us</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="giftshop.html">Gift Shop</a></li>
+            <li><a href="searches.html">Collectivo</a></li>
           </ul>
           <ul class="footer-links-cases">
             <li><p>Latest searches</p></li>
@@ -67,11 +67,10 @@
             <li><a href="#">MM/DD/YY</a></li>
           </ul>
           <div class="footer-sm">
-            <a href="#">
-              <img src="img/github.png" alt="Github Icon">
+            <a href="https://www.facebook.com/Cinco-y-Diez-111738623712834/">
               <img src="img/fb.png" alt="Facebook Icon">
               <img src="img/instagram.png" alt="Instagram Icon">
-              <img src="img/CyDT1.jpg" alt="Cinco y Diez Icon">
+              <img src="img/youtube.png" alt="Youtube Icon">
             </a>
           </div>
         </footer>
