--- a/contact.html
+++ b/contact.html
@@ -13,13 +13,25 @@
         <a href="index.html" class="header-brand">CINCO Y DIEZ</a>
         <nav>
           <ul>
-            <li><a href="#">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
           <a href="searches.html" class="header-cases">Collectivo</a>
         </nav>
       </header>
-      <main>
-
+      <main> <a> Register </a>
+        <form action="contactform.php" method="post">
+          <input type="text" name="email" value="Email address...">
+          <input type="password" name="pwd" placeholder="Password">
+          Male: <input type="radio" name="gender" value="Male">
+          Female: <input type="radio" name="gender" value="Female">
+          <textarea name="message"placeholder="Write a messsage"></textarea>
+          <select class="car">
+            <option value="car1">Chevrolet</option>
+            <option value="car2">Ford</option>
+            <option value="car3">Dodge</option>
+          </select>
+          <button type="submit" name="submit">Submit</button>
+        </form>
     </main>
     <div class="wrapper">
         <footer>
@@ -38,11 +50,10 @@
             <li><a href="#">MM/DD/YY</a></li>
           </ul>
           <div class="footer-sm">
-            <a href="#">
-              <img src="img/github.png" alt="Github Icon">
+            <a href="https://www.facebook.com/Cinco-y-Diez-111738623712834/">
               <img src="img/fb.png" alt="Facebook Icon">
               <img src="img/instagram.png" alt="Instagram Icon">
-              <img src="img/CyDT1.jpg" alt="Cinco y Diez Icon">
+              <img src="img/youtube.png" alt="Youtube Icon">
             </a>
           </div>
         </footer>
