--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="This is an online virtual 5y10 five and dime store">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="Gifts, Accesories, Donations, Community">
+    <meta name="author" content="CINCOYDIEZINC">
     <title> CINCO Y DIEZ </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link
